Convert .ie-wrap-content-fix to modules

--- a/frontend/src/metabase/css/core/flex.module.css
+++ b/frontend/src/metabase/css/core/flex.module.css
@@ -116,7 +116,7 @@
 /* Contents of elements inside flex items might not be wrapped correctly on IE11,
    set max-width manually to enforce wrapping
 */
-:global(.ie-wrap-content-fix) {
+.ieWrapContentFix {
   max-width: 100%;
 }
 
